--- a/index.html
+++ b/index.html
@@ -24,7 +24,22 @@
 <link rel="canonical" href="https://jeevmitra.github.io/jeevmitra-site/">
 <!-- ✅ AI Pro-level SEO Tags -->
 <title>JeevMitra – जानवरों और पक्षियों की सेवा के लिए समर्पित</title>
+<style>
+  body {
+    background-image: url('images/dog5.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  }
 
+  img {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: auto;
+  }
+</style>
 <meta name="description" content="JeevMitra एक सेवा प्लेटफॉर्म है जो स्ट्रीट डॉग्स, पक्षियों और ज़रूरतमंद जानवरों की मदद के लिए समर्पित है। डोनेशन से जान बचाइए, पानी, खाना और इलाज दीजिए।">
 <meta name="keywords" content="JeevMitra, animal donation India, dog help, bird water bowl, dog food seva, animal care, NGO for animals, jeev seva, dog shelter support, donate for animals">
 <meta name="robots" content="index, follow">
@@ -102,7 +117,7 @@
 <audio autoplay>
   <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_cd5a13cd87.mp3" type="audio/mpeg">
 </audio> <!-- 🎆 Fireworks Canvas -->
-<canvas id="fireworks-canvas" style="position:fixed;width:100vw;height:100vh;top:0;left:0;z-index:9999;pointer-events:none;"></canvas>
+
 
 <!-- 🌸 Petal Rain -->
 <div id="petals" class="pf-container" style="z-index:9998;"></div>
