--- a/index.html
+++ b/index.html
@@ -1,295 +1,202 @@
 <!DOCTYPE html>
 <html lang="hi">
-<head><!-- 🎆 Fireworks JS -->
-<script src="https://cdn.jsdelivr.net/npm/fireworks-js@2/dist/fireworks.js"></script>
-<!-- ❤️ Heart Animation CSS -->
-<style>
-  floating-heart {
-    position: absolute;
-    animation: floatHeart 5s ease-in-out forwards;
-    font-size: 24px;
-    z-index: 9999;
-    color: #ff4dd6;}
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>JeevMitra – जानवर और जीवों की सेवा</title>
+  <meta name="description" content="JeevMitra is India's most emotional and real seva site for animals.">
+  <meta name="keywords" content="dog seva, animal donation, cow seva, bird water seva, JeevMitra, real seva, feed street animals">
+  <meta name="author" content="Naresh Bithu & ChatGPT">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://jeevmitra.github.io/jeevmitra-site/">
+  <link rel="icon" href="dog1.jpg" type="image/jpg">
 
-  @keyframes floatHeart {
-    0% { opacity: 0; transform: translateY(0); }
-    50% { opacity: 1; transform: translateY(-100px); }
-    100% { opacity: 0; transform: translateY(-200px); }
-  
-</style> <!-- 🔥 JeevMitra SEO Booster Meta Tags -->
-<meta name="keywords" content="animal donation, dog seva, street dogs help, JeevMitra, cow seva, birds water seva, real animal care, donate for animals India, real animal seva platform">
-<meta name="description" content="JeevMitra is India's most real and trusted platform for animal seva. Donate to feed stray dogs, cows, and birds with love.">
-<meta name="author" content="JeevMitra & ChatGPT AI">
-<meta name="robots" content="index, follow">
-<link rel="canonical" href="https://jeevmitra.github.io/jeevmitra-site/">
-<!-- ✅ AI Pro-level SEO Tags -->
-<title>JeevMitra – जानवरों और पक्षियों की सेवा के लिए समर्पित</title>
-<style>
-  body {
-    background-image: url('images/dog5.jpg');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-  }
+  <!-- Fireworks -->
+  <script src="https://cdn.jsdelivr.net/npm/fireworks-js@2/dist/fireworks.js"></script>
 
-  img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-    margin: auto;
-  }
-</style>
-<meta name="description" content="JeevMitra एक सेवा प्लेटफॉर्म है जो स्ट्रीट डॉग्स, पक्षियों और ज़रूरतमंद जानवरों की मदद के लिए समर्पित है। डोनेशन से जान बचाइए, पानी, खाना और इलाज दीजिए।">
-<meta name="keywords" content="JeevMitra, animal donation India, dog help, bird water bowl, dog food seva, animal care, NGO for animals, jeev seva, dog shelter support, donate for animals">
-<meta name="robots" content="index, follow">
-<meta name="author" content="Naresh Bithu & ChatGPT AI">
-
-<!-- 📲 Social Media Sharing -->
-<meta property="og:title" content="JeevMitra – जानवरों की सेवा में मानवता">
-<meta property="og:description" content="Street dogs, birds & animals को बचाने के लिए donate करें। JeevMitra एक जन-सेवा मिशन है – मदद करें, जीवन बचाएं।">
-<meta property="og:url" content="https://jeevmitra.github.io/jeevmitra-site/">
-<meta property="og:type" content="website">
-<meta property="og:image" content="https://jeevmitra.github.io/jeevmitra-site/images/dog5.jpg">
-
-<!-- 🐦 Twitter card -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="JeevMitra – जानवरों की सेवा का अभियान">
-<meta name="twitter:description" content="Street animals और पक्षियों की सेवा करें। दान करें और बदलाव लाएं।">
-<meta name="twitter:image" content="https://jeevmitra.github.io/jeevmitra-site/images/dog5.jpg">
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>JeevMitra - पशु सेवा</title>
   <style>
-    <body> <!-- 🎆 Fireworks Canvas -->
-<canvas id="fireworks-canvas" style="position:fixed;width:100vw;height:100vh;top:0;left:0;z-index:1;pointer-events:none;"></canvas>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', sans-serif;
+      background: url('images/dog5.jpg') no-repeat center center fixed;
+      background-size: cover;
+      color: #222;
+    }
 
-<!-- 🌸 CSS-based Petal Rain (NO images) -->
-<style>
-  .petal {
-    position: fixed;
-    top: -10px;
-    width: 15px;
-    height: 15px;
-    background: #ff6ec7;
-    border-radius: 50%;
-    opacity: 0.8;
-    z-index: 9999;
-    animation: fall 6s linear infinite;
-  }
+    h1, h2 {
+      text-align: center;
+    }
 
-  @keyframes fall {
-    0% { transform: translateY(0) rotate(0deg); opacity: 0.9; }
-    100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
-  }
-</style>
+    .image-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 15px;
+      padding: 20px;
+    }
 
-<script src="https://cdn.jsdelivr.net/npm/fireworks-js@2/dist/fireworks.js"></script>
-<script>
-  // Fireworks
-  const fireCanvas = document.getElementById('fireworks-canvas');
-  const fireworks = new Fireworks.default(fireCanvas, {
-    hue: { min: 0, max: 360 },
-    delay: 15,
-    speed: 2,
-    acceleration: 1.05,
-    friction: 0.97,
-    gravity: 1.5,
-    particles: 100,
-    trace: 3,
-    explosion: 5
-  });
-  fireworks.start();
+    .image-grid div {
+      background: rgba(255, 255, 255, 0.8);
+      padding: 10px;
+      border-radius: 12px;
+    }
 
-  // Petal Rain
-  function createPetal() {
-    const petal = document.createElement("div");
-    petal.classList.add("petal");
-    petal.style.left = Math.random() * 100 + "vw";
-    petal.style.animationDuration = 4 + Math.random() * 4 + "s";
-    document.body.appendChild(petal);
-    setTimeout(() => petal.remove(), 8000);
-  }
-  setInterval(createPetal, 200);
-</script>
+    .donate-box {
+      background: #fffbe6;
+      text-align: center;
+      padding: 30px;
+    }
 
-<!-- 🔊 Welcome Sound -->
-<audio autoplay>
-  <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_cd5a13cd87.mp3" type="audio/mpeg">
-</audio> <!-- 🎆 Fireworks Canvas -->
+    footer {
+      background: #222;
+      color: white;
+      text-align: center;
+      padding: 15px;
+    }
 
+    /* 🌸 Petals */
+    .petal {
+      position: fixed;
+      top: -10px;
+      width: 15px;
+      height: 15px;
+      background: #ff69b4;
+      border-radius: 50%;
+      opacity: 0.8;
+      z-index: 9997;
+      animation: fall 6s linear infinite;
+    }
 
-<!-- 🌸 Petal Rain -->
-<div id="petals" class="pf-container" style="z-index:9998;"></div>
+    @keyframes fall {
+      0% { transform: translateY(0) rotate(0deg); opacity: 0.9; }
+      100% { transform: translateY(100vh) rotate(360deg); opacity: 0; }
+    }
 
-<!-- 🔊 Welcome Sound -->
-<audio id="entry-sound" autoplay>
-  <source src="https://cdn.pixabay.com/audio/2022/03/15/audio_c5d3a1cd87.mp3" type="audio/mpeg">
-</audio>
+    /* ✍️ Typewriter */
+    #typewriter-text {
+      font-size: 1.5em;
+      font-weight: bold;
+      color: #880000;
+      text-shadow: 1px 1px #fff;
+      min-height: 50px;
+    }
   </style>
 </head>
+
 <body>
+  <!-- 🎆 Fireworks canvas -->
+  <canvas id="fireworks-canvas" style="position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:1;pointer-events:none;"></canvas>
+  <div id="petals" style="z-index:9997;"></div>
 
-<header>
-  <h1>🐾 JeevMitra - एक सेवा भावना</h1>
-  <p>पशु और पक्षियों की सेवा ही सच्ची मानवता है</p>
-</header>
+  <header>
+    <h1>🐾 JeevMitra</h1>
+    <div id="typewriter-text"></div>
+    <p>कुत्ते, गाय, और पक्षियों की सेवा – सच्ची मानवता का मार्ग</p>
+  </header>
 
-<section>
-  <h2 style="text-align:center;">📸 हमारी सेवाएं</h2>
-  <div class="image-grid">
-    <div><img src="dog1.jpg"><p>भूखे को भोजन</p></div>
-    <div><img src="dog2.jpg"><p>बीमार का इलाज</p></div>
-    <div><img src="dog3.png"><p>गर्मी में पानी सेवा</p></div>
-    <div><img src="dog4.jpg"><p>सड़क किनारे सहारा</p></div>
-    <div><img src="dog5.jpg"><p>ममता की छांव</p></div>
-    <div><img src="dog6.jpg"><p>प्रसव के समय सहायता</p></div>
-    <div><img src="dog7.jpg"><p>हर जीव की रक्षा</p></div>
-    <div><img src="dog8.jpg"><p>प्यार और सहारा</p></div>
-  </div>
-</section>
-
-<section class="donate-box">
-  <h2>🙏 सहायता करें</h2>
-  <p>आपका छोटा सा योगदान किसी जानवर की जिंदगी बदल सकता है।</p>
-  <p><strong>UPI ID:</strong> 7357897775@ptyes</p>
-  <img src="scanner.jpg" alt="UPI QR Code">
-</section>
-
-</section><h2 style="text-align:center;">📋 हमारे दानदाता</h2>
-  <p style="text-align:center;">आप सभी का सहयोग हमारे लिए अमूल्य है।</p>
-
-  <div style="text-align: center; margin-bottom: 20px;">
-    <img src="qr.png" alt="UPI QR" width="200">
-    <p><strong>UPI ID:</strong> 7357897775@ptyes</p>
-    <button onclick="navigator.clipboard.writeText('7357897775@ptyes'); alert('UPI ID copied!');">
-      कॉपी करें
-    </button>
-  </div>
-<section>
   <section>
-  <h2 style="text-align:center;">📋 हमारे दानदाता</h2>
-  <div style="display: flex; justify-content: center;">
-    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJWYXXfqCZx-auYdFN4vt5gnPWlYTGktcSLeD9xgtNAaZ_eP-CH_5zHO458ZueH1G0PC9cECQs2ebS/pubhtml" width="1000" height="500"></iframe>
-  </div>
-</section>
-
-  <div class="image-grid">
-    <div><img src="dog1.jpg"><p>Tommy: इलाज से नई जिंदगी</p></div>
-    <div><img src="dog2.jpg"><p>Bird Pots: गर्मी में जीवनदायिनी सेवा</p></div>
-    <div><img src="dog6.jpg"><p>Rani: सुरक्षित प्रसव और गोद लिया गया</p></div>
-  </div>
-</section>
-
-<section>
-  <h2 style="text-align:center;">🌿 पक्षी जल सेवा</h2>
-  <p style="max-width: 800px; margin: auto; font-size: 1.1em; line-height: 1.6;">
-    गर्मी के दिनों में जब प्यास से पक्षी तड़पते हैं, तब आपकी दी गई मदद से हमने 70+ जल पात्र शहर की दीवारों पर लगाए।  
-    हर एक जल पात्र जीव रक्षा की परंपरा को आगे बढ़ा रहा है।
-  </p>
-</section><!-- 🐦 Bird Seva Section -->
-<section style="background-color:#f0f8ff; padding:40px; text-align:center;">
-  <h2 style="font-size:2em; color:#2e8b57;">🐦 परिंदों की सेवा – जीवन को नवजीवन दें</h2>
-  <p style="font-size:1.2em; max-width:700px; margin:auto;">गर्मी में प्यासे पक्षियों के लिए पानी का इंतजाम एक पुण्य कार्य है। छोटे-छोटे बर्तन में पानी और दाना रखकर आप अनगिनत जीवों की जान बचा सकते हैं।</p>
-
-  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px;">
-    <div style="text-align:center;">
-      <img src="birdA.jpg" width="200" alt="जलधारा जीवन की"><br>
-      <strong>जलधारा जीवन की</strong><br>
-      <em>एक कटोरी पानी – हज़ारों पंखों को राहत</em>
+    <h2>📸 हमारी सेवाएं</h2>
+    <div class="image-grid">
+      <div><img src="dog1.jpg"><p>भूखे को भोजन</p></div>
+      <div><img src="dog2.jpg"><p>बीमार का इलाज</p></div>
+      <div><img src="dog3.png"><p>गायों की सेवा</p></div>
+      <div><img src="dog4.jpg"><p>बेज़ुबानों की मदद</p></div>
+      <div><img src="dog5.jpg"><p>छायादान</p></div>
+      <div><img src="dog6.jpg"><p>पक्षियों के लिए पानी</p></div>
+      <div><img src="dog7.jpg"><p>अनाथ पशु सहारा</p></div>
+      <div><img src="dog8.jpg"><p>रात का सहारा</p></div>
     </div>
-    <div style="text-align:center;">
-      <img src="birdB.jpg" width="200" alt="छोटा तिनका, बड़ा सहारा"><br>
-      <strong>छोटा तिनका, बड़ा सहारा</strong><br>
-      <em>जहां दाना रखा, वहां दुआ बस गई</em>
-    </div>
-    <div style="text-align:center;">
-      <img src="birdC.jpg" width="200" alt="साथी पंखों वाले"><br>
-      <strong>साथी पंखों वाले</strong><br>
-      <em>प्रकृति के सबसे प्यारे मेहमान – हमारे आंगन में</em>
-    </div>
-    <div style="text-align:center;">
-      <img src="birdD.png" width="200" alt="बर्तन नहीं, जीवनदान"><br>
-      <strong>बर्तन नहीं, जीवनदान</strong><br>
-      <em>हर बूँद एक वरदान है इस गर्मी में</em>
-    </div>
-    <div style="text-align:center;">
-      <img src="birdE.png" width="200" alt="बालक का परिंदों से प्रेम"><br>
-      <strong>बालक का परिंदों से प्रेम</strong><br>
-      <em>मासूम हाथों से बड़ी सेवा की शुरुआत</em>
-    </div>
-  </div>
-</section>
+  </section>
 
-<!-- 🐄 Gau Seva Section -->
-<section style="background-color:#fff0f5; padding:40px; text-align:center;">
-  <h2 style="font-size:2em; color:#8b0000;">🐄 गौसेवा – करुणा और संस्कृति का संगम</h2>
-  <p style="font-size:1.2em; max-width:700px; margin:auto;">गाय हमारी माँ समान है। बीमार, भूखी या प्यासी गायों की सेवा करना हमारा धर्म है। छोटा सा सहयोग किसी माँ के लिए संजीवनी बन सकता है।</p>
+  <section class="donate-box">
+    <h2>🙏 छोटा सहयोग, किसी की ज़िंदगी</h2>
+    <p><strong>UPI ID:</strong> 7357897775@pyes</p>
+    <img src="scanner.jpg" alt="QR Code" width="200">
+  </section>
 
-  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:20px; margin-top:30px;">
-    <div style="text-align:center;">
-      <img src="cowF.jpg" width="200" alt="माँ की ममता"><br>
-      <strong>माँ की ममता</strong><br>
-      <em>गौमाता की मूक प्रार्थना – आपकी दया से पूरी होती है</em>
+  <section>
+    <h2>📊 हमारे योगदान</h2>
+    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTJiWXxfqCZX-auvNdFN4vt5gnPMlYTGktcSLeD9xtNaAZ_eP-CH_5ZH04SAUzHE1G0PGC5EC9t2ebS/pubhtml" width="1000" height="500" style="display:block;margin:auto;"></iframe>
+  </section>
+
+  <section>
+    <h2>🌿 पानी सेवा</h2>
+    <p style="text-align:center;">गर्मी में प्याले रखें, जीवन बचाएं।</p>
+    <div class="image-grid">
+      <div><img src="birdA.jpg"><p>जलपान जीवन की</p></div>
+      <div><img src="birdB.jpg"><p>प्याले निकाल, प्यास बुझाओ</p></div>
+      <div><img src="birdC.jpg"><p>छोटी नाली नहीं, जीवनधारा</p></div>
+      <div><img src="birdD.png"><p>परिंदों का प्याला ही प्राण</p></div>
     </div>
-    <div style="text-align:center;">
-      <img src="cowG.png" width="200" alt="बचपन की बोतल"><br>
-      <strong>बचपन की बोतल</strong><br>
-      <em>एक बूँद दूध – एक नन्हा जीवन मुस्कुराता है</em>
+  </section>
+
+  <section style="background:#fff0f5;">
+    <h2>🐄 गौ सेवा</h2>
+    <p style="text-align:center;">गौ माता हमारी संस्कृति की आत्मा हैं। सेवा से पुण्य और आशीर्वाद दोनों मिलता है।</p>
+    <div class="image-grid">
+      <div><img src="cow6.png"><p>चरवाहा की लीला</p></div>
+      <div><img src="cowF.jpg"><p>गौमाता की छाया</p></div>
     </div>
-    <div style="text-align:center;">
-      <img src="cowH.jpg" width="200" alt="बछड़े की उम्मीद"><br>
-      <strong>बछड़े की उम्मीद</strong><br>
-      <em>प्यासी आँखें, आपके प्रेम से मिली राहत</em>
+  </section>
+
+  <section style="background:#fffbe6;">
+    <h2>📕 प्रेरक जीव प्रेमी कहानियाँ</h2>
+    <div class="image-grid">
+      <div><img src="birdF.png"><h3>पंछी प्रेम</h3><p>नन्हा बच्चा रोज 68 चिड़ियों को पानी देता है</p></div>
+      <div><img src="cowF.jpg"><h3>गौ सेवा</h3><p>15 साल की बच्ची रोज 5 बजे उठकर चारा देती है</p></div>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- ❤️ जीव प्रेमियों की प्रेरणादायक कहानियाँ -->
-<section style="background-color:#fffbe6; padding:40px; text-align:center;">
-  <h2 style="font-size:2em; color:#d2691e;">❤️ जीव प्रेम की मिसाल – कुछ सच्ची कहानियाँ</h2>
+  <section style="text-align:center;">
+    <h2>🪔 अमृता देवी बलिदान गाथा</h2>
+    <p>1730 – खेजड़ली, राजस्थान। खेजड़ी पेड़ बचाने के लिए अमृता देवी ने बेटियों सहित बलिदान दिया।</p>
+    <img src="amrita.jpg" alt="Amrita Devi" width="300" style="border-radius:12px;">
+  </section>
 
-  <div style="display:flex; flex-wrap:wrap; justify-content:center; gap:40px; max-width:1100px; margin:auto; text-align:left; font-size:1.1em; line-height:1.6;">
+  <footer>
+    © 2025 - JeevMitra | Created by <strong>Naresh Bithu</strong> 🤝 <strong>ChatGPT AI</strong>
+  </footer>
 
-    <!-- Story 1 -->
-    <div style="flex:1; min-width:300px;">
-      <img src="birdE.png" alt="Bird Story" style="width:100%; border-radius:15px; box-shadow:0 4px 8px rgba(0,0,0,0.2);">
-      <h3 style="color:#2e8b57;">🐦 12 साल का बालक – ‘पानी वाला दोस्त’</h3>
-      <p>राजस्थान के एक गाँव में 12 वर्षीय आयुष हर सुबह अपनी छत पर मिट्टी के बर्तन में पानी और चावल डालता है। पिछले 3 सालों से वह गर्मी में परिंदों की सेवा कर रहा है। उसकी छत पर अब रोज़ 50 से अधिक चिड़ियाँ आती हैं। उसका कहना है – <em>“अगर हम उनके लिए नहीं सोचेंगे, तो कौन सोचेगा?”</em></p>
-    </div>
+  <!-- Scripts -->
+  <script>
+    // 🌸 Petal Rain
+    function createPetal() {
+      const petal = document.createElement("div");
+      petal.classList.add("petal");
+      petal.style.left = Math.random() * 100 + "vw";
+      petal.style.animationDuration = 4 + Math.random() * 4 + "s";
+      document.body.appendChild(petal);
+      setTimeout(() => petal.remove(), 8000);
+    }
+    setInterval(createPetal, 200);
 
-    <!-- Story 2 -->
-    <div style="flex:1; min-width:300px;">
-      <img src="cowF.jpg" alt="Cow Story" style="width:100%; border-radius:15px; box-shadow:0 4px 8px rgba(0,0,0,0.2);">
-      <h3 style="color:#8b0000;">🐄 बुज़ुर्ग दंपत्ति की गौसेवा</h3>
-      <p>जयपुर के पास रहने वाले 68 वर्षीय श्रीमती शांति देवी और उनके पति ने अपने जीवन की बचत से एक छोटी सी गौशाला बनाई। आज वे 15 बीमार और बेसहारा गायों की देखभाल कर रहे हैं। सुबह 5 बजे से लेकर रात 9 बजे तक वे खुद उनकी सेवा करते हैं। उनका कहना है – <em>“गौमाता की सेवा ही हमारी असली पूजा है।”</em></p>
-    </div>
+    // 🎆 Fireworks
+    window.onload = () => {
+      const fireCanvas = document.getElementById("fireworks-canvas");
+      const fireworks = new Fireworks(fireCanvas, {
+        hue: { min: 0, max: 360 },
+        delay: 15,
+        speed: 2,
+        acceleration: 1.05,
+        friction: 0.97,
+        gravity: 1.5,
+        particles: 100,
+        trace: 3,
+        explosion: 5
+      });
+      fireworks.start();
 
-  </div>
-</section>
-
-
-
-<section>
-  <h2 style="text-align:center; color: #8B0000;">🌳 अमृता देवी विश्नोई: बलिदान की मिसाल</h2>
-  <p style="max-width: 800px; margin: auto; font-size: 1.1em; line-height: 1.6;">
-    वर्ष 1730, जोधपुर के निकट खेजड़ली गाँव में <strong>अमृता देवी विश्नोई</strong> ने पेड़ों और जीवों की रक्षा के लिए अपने प्राण त्याग दिए।  
-    उनके साथ 363 विश्नोई समाज के लोगों ने बलिदान दिया।  
-    उनका वाक्य आज भी प्रेरणास्रोत है:  
-    <em>“सर सांतें रूख रहे तो भी सस्तो जाण”</em>  
-    <br><br>
-    राजस्थान की यह भूमि जीवों के लिए अपना सर्वस्व समर्पित करने वालों की भूमि है।
-  </p>
-  <div style="text-align: center; margin-top: 20px;">
-    <img src="amrita.jpg" alt="Amrita Devi" width="300" style="border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.2);">
-    </div>
-</section>
-<footer style="text-align: center; padding: 20px; background: #f5f5f5; font-size: 14px;">
-  🤝 यह सेवा वेबसाइट <strong>Naresh Bithu</strong> और <strong>ChatGPT</strong> द्वारा मिलकर बनाई गई है।  
-  <br>🐾 जीवनदायिनी सेवा… हमेशा के लिए।
-</footer>
+      // ✍️ Typewriter
+      const text = "बेज़ुबानों की सेवा ही सच्ची मानवता है...";
+      let i = 0;
+      function typeWriter() {
+        if (i < text.length) {
+          document.getElementById("typewriter-text").innerHTML += text.charAt(i);
+          i++;
+          setTimeout(typeWriter, 100);
+        }
+      }
+      typeWriter();
+    };
+  </script>
 </body>
 </html>
-
-
-
